@@ -43,6 +43,10 @@
 
 #include "libpq-fe.h"
 
+#ifdef PQXX_QUIET_DESTRUCTORS
+#include "pqxx/errorhandler"
+#endif
+
 #include "pqxx/binarystring"
 #include "pqxx/connection"
 #include "pqxx/connection_base"
@@ -959,7 +963,7 @@ void pqxx::connection_base::close() throw ()
 {
   m_Completed = false;
 #ifdef PQXX_QUIET_DESTRUCTORS
-  quiet_errorhandler(*this);
+  quiet_errorhandler quiet(*this);
 #endif
   inhibit_reactivation(false);
   m_reactivation_avoidance.clear();
