@@ -23,6 +23,10 @@
 
 #include "pqxx/notification"
 
+#ifdef PQXX_QUIET_DESTRUCTORS
+#include "pqxx/errorhandler"
+#endif
+
 
 using namespace pqxx::internal;
 
@@ -40,7 +44,7 @@ pqxx::notification_receiver::notification_receiver(
 pqxx::notification_receiver::~notification_receiver()
 {
 #ifdef PQXX_QUIET_DESTRUCTORS
-  disable_noticer Quiet(this->conn());
+  quiet_errorhandler quiet(this->conn());
 #endif
   gate::connection_notification_receiver(this->conn()).remove_receiver(this);
 }
